# tinyfjing

./: .gitignore  CMakeLists.txt  LICENSE  TinyFJingSTL.h  grammar.bnf  main.cpp
Srouce/: Message.h  TinyFJingMessage.h  TinyFJingSTL.h
Srouce/ast/: TinyFJingAST.cpp  TinyFJingAST.h  TinyFJingValue.cpp  TinyFJingValue.h
Srouce/compiler/: TinyFJingLexical.cpp  TinyFJingLexical.h  TinyFJingLexicalAnalyzer.cpp  TinyFJingLexicalAnalyzer.h  TinyFJingParser.cpp  TinyFJingParser.h
TestCaese/: fun_defined.txt  hello.txt
UnitTest/: LexicalTest.h  Main.cpp  UnitTest.h
compiler/: TinyFJingLexicalAnalyzer.cpp  TinyFJingLexicalAnalyzer.h
gtest/: CMakeLists.txt
